kubernetes/banklab/customer-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: banklab-customer-web
  namespace: synthetic-clients
  labels:
    app.kubernetes.io/name: banklab-customer-web
    app.kubernetes.io/part-of: kong-bank-lab
    banklab.konghq.com/managed-by: gitops
    banklab.konghq.com/platform-layer: customer-experience
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: banklab-customer-web
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
