kubernetes/banklab/customer-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banklab-customer-web
  namespace: synthetic-clients
  labels:
    app.kubernetes.io/name: banklab-customer-web
    app.kubernetes.io/part-of: kong-bank-lab
    banklab.konghq.com/managed-by: gitops
    banklab.konghq.com/platform-layer: customer-experience
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: banklab-web.soyspray.vip
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: banklab-customer-web
                port:
                  number: 80
